# Transformer_Architecture

./: .gitignore  =2  EncoderBlock.ipynb  README.md  conf.py  data.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  train.py
models/blocks/: decoder_layer.py  encoder_layer.py
models/embeddings/: positional_encoding.py  token_embeddings.py  transformer_econding.py
models/layers/: add_norm.py  multihead_attention.py  positionwise_feed_forward.py  scale_dot_product.py  tempCodeRunnerFile.py
models/model/: decoder.py  encoder.py  transformer.py
util/: bleu.py  data_loader.py  epoch_timer.py  tokenizer.py
